@startuml

!theme plain
left to right direction

class tricks {
    id: string
    name: string
    description: string
    slug: string
    main_image_id: ?string
    user_id: ?string
    group_id: string
    blocked_at: ?datetime
    created_at: datetime
    updated_at: datetime
}

class images {
    id: string
    name: string
    main_image_trick_id: string
    trick_id: string
    created_at: datetime
    updated_at: datetime
}

class videos {
    id: string
    url: string
    trick_id: string
    created_at: datetime
    updated_at: datetime
}

class comments {
    id: string
    comment: string
    blocked_at: ?datetime
    trick_id: string
    user_id: string
    created_at: datetime
    updated_at: datetime
}

class groups {
    id: string
    name: string
    created_at: datetime
    updated_at: datetime
}

class users {
    id: string
    firstname: string
    lastname: string
    username: string
    email: string
    password: string
    profile_picture: ?string
    confirmed_at: ?datetime
    blocked_at: ?datetime
    confirmation_token: ?string
    forgot_password_token: ?string
    created_at: datetime
    updated_at: datetime
}

tricks "1" -- "*" images
tricks "1" -- "0..1" images
tricks "1" -- "*" videos
groups "1" -- "*" tricks
users "1" -- "*" comments
comments "*" -- "1" tricks
users "1" -- "*" tricks

@enduml